Closed Bug 1688716 Opened 5 years ago Closed 5 years ago

ThreadSanitizer: data race ../src/util/u_thread.h:197:4 in iris_dri.so

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
89 Branch
Tracking Status
firefox89 --- fixed

People

(Reporter: jkratzer, Assigned: tsmith)

References

(Blocks 2 open bugs)

Details

(Whiteboard: [fuzzblocker])

Attachments

(1 file)

The following ThreadSanitizer issue was detected during startup on mozilla-central revision 20210125-fddc94978eb7.

WARNING: ThreadSanitizer: data race (pid=34691)
  Write of size 1 at 0x7fffd93e6740 by main thread:
    #0 pthread_barrier_destroy /builds/worker/fetches/llvm-project/llvm/projects/compiler-rt/lib/tsan/rtl/tsan_interceptors_posix.cpp:1410:3 (firefox+0x5dac6)
    #1 <null> ../src/util/u_thread.h:197:4 (iris_dri.so+0x4bb6e6)
    #2 <null> ../src/util/u_queue.c:687:4 (iris_dri.so+0x4bb6e6)
    #3 fire_glxtest_process() /builds/worker/checkouts/gecko/toolkit/xre/glxtest.cpp:1213:14 (libxul.so+0x6597066)
    #4 XREMain::XRE_mainInit(bool*) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:3542:3 (libxul.so+0x6588bc2)
    #5 XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:5331:16 (libxul.so+0x65918b2)
    #6 XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:5417:21 (libxul.so+0x6591ee4)
    #7 mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/Bootstrap.cpp:45:12 (libxul.so+0x659c4a2)
    #8 do_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:220:22 (firefox+0xc688c)
    #9 main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:344:16 (firefox+0xc688c)

  Previous read of size 1 at 0x7fffd93e6740 by thread T2:
    #0 pthread_barrier_wait /builds/worker/fetches/llvm-project/llvm/projects/compiler-rt/lib/tsan/rtl/tsan_interceptors_posix.cpp:1417:3 (firefox+0x5dc16)
    #1 <null> ../src/util/u_queue.c:308:10 (iris_dri.so+0x4bac14)

  Location is stack of main thread.

  Location is global '??' at 0x7fffd93c9000 ([stack]+0x00000001d740)

  Thread T2 'firefox:disk$0' (tid=34711, running) created by main thread at:
    #0 pthread_create /builds/worker/fetches/llvm-project/llvm/projects/compiler-rt/lib/tsan/rtl/tsan_interceptors_posix.cpp:966:3 (firefox+0x5adcb)
    #1 <null> ../include/c11/threads_posix.h:289:9 (iris_dri.so+0x4ba9a6)
    #2 <null> ../src/util/u_thread.h:65:10 (iris_dri.so+0x4ba9a6)
    #3 fire_glxtest_process() /builds/worker/checkouts/gecko/toolkit/xre/glxtest.cpp:1213:14 (libxul.so+0x6597066)
    #4 XREMain::XRE_mainInit(bool*) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:3542:3 (libxul.so+0x6588bc2)
    #5 XREMain::XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:5331:16 (libxul.so+0x65918b2)
    #6 XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/nsAppRunner.cpp:5417:21 (libxul.so+0x6591ee4)
    #7 mozilla::BootstrapImpl::XRE_main(int, char**, mozilla::BootstrapConfig const&) /builds/worker/checkouts/gecko/toolkit/xre/Bootstrap.cpp:45:12 (libxul.so+0x659c4a2)
    #8 do_main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:220:22 (firefox+0xc688c)
    #9 main /builds/worker/checkouts/gecko/browser/app/nsBrowserApp.cpp:344:16 (firefox+0xc688c)

SUMMARY: ThreadSanitizer: data race ../src/util/u_thread.h:197:4 

General information about TSan reports
Why fix races?

Data races are undefined behavior and can cause crashes as well as correctness issues. Compiler optimizations can cause racy code to have unpredictable and hard-to-reproduce behavior.
Rating

If you think this race can cause crashes or correctness issues, it would be great to rate the bug appropriately as P1/P2 and/or indicating this in the bug. This makes it a lot easier for us to assess the actual impact that these reports make and if they are helpful to you.
False Positives / Benign Races

Typically, races reported by TSan are not false positives [1], but it is possible that the race is benign. Even in this case it would be nice to come up with a fix if it is easily doable and does not regress performance. Every race that we cannot fix will have to remain on the suppression list and slows down the overall TSan performance. Also note that seemingly benign races can possibly be harmful (also depending on the compiler, optimizations and the architecture) [2][3].

[1] One major exception is the involvement of uninstrumented code from third-party libraries.
[2] http://software.intel.com/en-us/blogs/2013/01/06/benign-data-races-what-could-possibly-go-wrong
[3] How to miscompile programs with "benign" data races: https://www.usenix.org/legacy/events/hotpar11/tech/final_files/Boehm.pdf
Suppressing unfixable races

If the bug cannot be fixed, then a runtime suppression needs to be added in mozglue/build/TsanOptions.cpp. The suppressions match on the full stack, so it should be picked such that it is unique to this particular race. The bug number of this bug should also be included so we have some documentation on why this suppression was added.

This issue is preventing fuzzers from launching the browser. It is also blocking reduction of existing TSan issues that have been previously discovered.

Blocks: tsan
Whiteboard: [fuzzblocker]

glxtest is some graphics thing that runs at startup. The race might involve graphics drivers?

Component: Startup and Profile System → Graphics
Product: Toolkit → Core
Summary: ThreadSanitizer: data race ../src/util/u_thread.h:197:4 → ThreadSanitizer: data race ../src/util/u_thread.h:197:4 in iris_dri.so

decoder pointed out that the issue is probably that iris_dri.so is not instrumented, rather than some graphics problem per se.

Assignee: nobody → twsmith
Pushed by choller@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1ff95c63d8e9 Suppress TSan failure calling into graphics drivers. r=decoder
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Blocks: domino
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: