Bug 1688716 - Suppress TSan failure calling into graphics drivers. r=decoder

Differential Revision: https://phabricator.services.mozilla.com/D111206